feat(): update 3.0.0